--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "private": true,
   "scripts": {
     "format:prettier": "prettier --w --plugin-search-dir=. .",
-    "lint:eslint": "eslint --fix src/**/*.{ts,astro}",
+    "lint:eslint": "eslint --fix src/**/*.js",
     "start": "node bot",
-    "test": "eslint src/**/*.{ts,astro,mdx} && prettier --c ."
+    "test": "eslint src/**/*.js && prettier --c ."
   },
   "packageManager": "yarn@3.3.1",
   "dependencies": {
